@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id('io.freefair.lombok') version '9.0.0'
+    //id('io.freefair.lombok') version '9.0.0'
 }
 
 repositories {
@@ -14,11 +14,18 @@ dependencies {
 
 
     implementation project(':feature:event:api')
-    implementation project(':feature:event:impl')
+    //implementation project(':feature:event:impl')
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs << "--enable-preview"
+    options.compilerArgs += [
+            "--enable-preview",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    ]
 }
 
 tasks.withType(Test).configureEach {
